# Churn_Prediction_ver_2

./: .env.example  .gitignore  Kiểm thử hệ thống với K8s local.md  README.md  airflow_default_values.yaml  debug_pod.yaml  implementation_plan.md.resolved  local-logs-pvc.yaml  migration_roadmap_polars.md  pyproject.toml  rebuild_k8s_local.ps1  requirements.txt
Coding_conventions/: 00-Index_and_glossary.md  01-Structure_conventions.md  02-Config_conventions.md  03-Naming_style_conventions.md  04-Dependencies_import_conventions.md  05-Error_handling_convention.md  06-Logging_observability_convention.md  07-Testing_convention.md  08-Security_secrets_conventions.md  09-Git_pr_release_convention.md  10-Code_design_principles.md  11-Definition_of_done.md  12-Api_conventions.md  13-data_ml_conventions.md  14-Infrastructure_deployment.md  15-Documentation_conventions.md  16-System_architecture_conventions.md  17-Feature_flags_convention.md  18-Observability_orchestration_conventions.md  Các_sử_dụng_với_agents.md
dags/: ds_churn_eda.py  ds_churn_feature_ablation.py  ds_churn_features.py  ds_churn_housekeeping.py  ds_churn_ingest.py  ds_churn_pipeline.py
docs/: feature_generation_phase_handover.md  feature_generation_quality.md  v1_v2_logic_comparison.md  workflow.md
infrastructure/: .dockerignore  Dockerfile  Dockerfile.airflow  Dockerfile.app  docker-compose.yaml  rebuild_k8s_local.ps1
src/: __init__.py
tests/: __init__.py  conftest.py  test_activity_tiering.py  test_best_config.py  test_config.py  test_confirmed_samples.py  test_cskh_loader.py  test_dag_templates.py  test_evaluator.py  test_ewma.py  test_feature_ablation.py  test_feature_db_utils.py  test_feature_gen.py  test_feature_source_schema.py  test_guardrail.py  test_ingest_log_repository.py  test_ingest_zip_job.py  test_ingestion_table_schema.py  test_label_calibration.py  test_label_construction.py  test_leading_prototype.py  test_model_config.py  test_pipeline_config.py  test_pseudo_labeling.py  test_sample_weighting.py  test_sanity_checks.py  test_scope_filter.py  test_scorer.py  test_static_aggregation.py  test_window_aggregation.py  test_window_manifest.py  test_window_planner.py  test_window_quality.py
(+177 files in other folders)
